@@ -1,6 +1,7 @@
 - diskdrake:
   o really fix partition device name for some dmraid (missing "p", cf #38363)
 - draksound (#37826):
+  o add support to enable/disable ALSA to PA routing (#37826)
   o add support to enable/disable PulseAudio
   o add support to enable/disable user switching
   o display trouble shooting when there's no driver too
